--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,4 +11,9 @@
 
 body {
   background-color: #000000;
+  margin: 0;
+  padding: 0;
+  font-family: monospace;
+  color: #ffffff;
+  height: 100dvh;
 }
