--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,11 +9,63 @@
  * Consider organizing styles into separate files for maintainability.
  */
 
+:root * {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #000000;
   margin: 0;
   padding: 0;
   font-family: monospace;
   color: #ffffff;
-  height: 100dvh;
+  height: min(100dvh, 100vh);
+  display: flex;
+  flex-direction: column;
+
+  main {
+    flex-grow: 1;
+    overflow-y: auto;
+  }
+}
+
+body.settings {
+  display: grid;
+  grid-template-columns: fit-content(30dvw) 1fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas: "nav header" "nav content";
+  padding: 10px;
+
+  .settings-navigation {
+    grid-area: nav;
+    margin-right: 10px;
+    overflow-y: auto;
+  }
+
+  .settings-header {
+    grid-area: header;
+    display: flex;
+    justify-content: flex-end;
+
+    .title {
+      flex-grow: 1;
+      justify-self: center;
+      align-self: center;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      font-size: 1em;
+    }
+
+    .back-link {
+      justify-self: flex-end;
+      align-self: flex-end;
+    }
+  }
+
+  .settings-content {
+    grid-area: content;
+    display: block;
+    overflow-y: auto;
+  }
 }
