refactoring profile_updated mailer action to sheet_updated to continue naming scheme

--- a/app/views/character_mailer/sheet_updated.html.erb
+++ b/app/views/character_mailer/sheet_updated.html.erb
@@ -1,4 +1,4 @@
-<p>Hi <%= @character.tag %>, you have updated your profile!</p>
+<p>Hi <%= @character.tag %>, you have updated your character sheet!</p>
 
 <p>
   If you did not make this change, <%= link_to "reset your password immediately here", edit_password_url(@character.password_padlock.key_reset_token) %>.
