--- a/app/views/character_mailer/sheet_updated.text.erb
+++ b/app/views/character_mailer/sheet_updated.text.erb
@@ -1,4 +1,4 @@
-Hi <%= @character.tag %>, you have updated your profile!
+Hi <%= @character.tag %>, you have updated your character sheet!
 
 If you did not make this change, reset your password immediately here <%= edit_password_url(@character.password_padlock.key_reset_token) %>.
 
